fix alignment of search form submit icon

--- a/app/javascript/stylesheets/partials/header.scss
+++ b/app/javascript/stylesheets/partials/header.scss
@@ -38,6 +38,11 @@
     z-index: 1000;
   }
 
+  & .input-group-append svg {
+    margin-left: -3px;
+    margin-top: -5px;
+  }
+
   & .submit-search-text {
     @include visually-hidden;
   }
